--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
     "start": "node dist/index.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "typescript": "^5.3.3"
+  }
 }
